--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.7.3",
+    "dompurify": "^3.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.25.1",
     "sass": "^1.77.8"
   },
