--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,7 +19,9 @@
     "env": "^0.0.2",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.4",
-    "prisma": "^5.17.0"
+    "nodemon": "^3.1.4"
+  },
+  "devDependencies": {
+    "prisma": "^5.19.0"
   }
 }
