implemented scket io for real time chat and improved UI

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.25.1",
     "sass": "^1.77.8",
+    "socket.io-client": "^4.7.5",
     "timeago.js": "^4.0.2"
   },
   "devDependencies": {
