--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "console-ninja node --env-file .env --watch app.js"
+    "dev": "console-ninja node --env-file .env --watch app.js",
+    "start": "node --env-file .env --watch app.js"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +23,7 @@
     "nodemon": "^3.1.4"
   },
   "devDependencies": {
+    "console-ninja": "^1.0.0",
     "prisma": "^5.19.0"
   }
 }
